@@ -206,7 +206,8 @@ set_environ (char **envv)
  * the 'essential' information for reporting Mouse Events
  * pared down from XButtonEvent
  */
-struct mouse_event {
+struct mouse_event
+{
   int clicks;
   Time time;             /* milliseconds */
   unsigned int state;    /* key or button mask */
@@ -557,7 +558,8 @@ enum {
 
 #if ENABLE_FRILLS
 # include <X11/Xmd.h>
-typedef struct _mwmhints {
+typedef struct _mwmhints
+{
   CARD32 flags;
   CARD32 functions;
   CARD32 decorations;
@@ -614,8 +616,11 @@ typedef struct _mwmhints {
 #define Width2Pixel(n)          ((int32_t)(n) * (int32_t)fwidth)
 #define Height2Pixel(n)         ((int32_t)(n) * (int32_t)fheight)
 
-#define LINENO(n) MOD (term_start + int(n), total_rows)
-#define ROW(n) row_buf [LINENO (n)]
+#define LINENO_of(t,n) MOD ((t)->term_start + int(n), (t)->total_rows)
+#define ROW_of(t,n) (t)->row_buf [LINENO_of ((t), n)]
+
+#define LINENO(n) LINENO_of (this, n)
+#define ROW(n) ROW_of (this, n)
 
 /* how to build & extract colors and attributes */
 #define GET_BASEFG(x)           (((x) & RS_fgMask))
@@ -642,10 +647,12 @@ typedef struct _mwmhints {
 #define ISSET_PIXCOLOR(idx)     (!!rs[Rs_color + (idx)])
 
 #if ENABLE_STYLES
-# define FONTSET(style) fontset[GET_STYLE (style)]
+# define FONTSET_of(t,style) (t)->fontset[GET_STYLE (style)]
 #else
-# define FONTSET(style) fontset[0]
+# define FONTSET_of(t,style) (t)->fontset[0]
 #endif
+
+#define FONTSET(style) FONTSET_of (this, style)
 
 typedef callback<void (const char *)> log_callback;
 typedef callback<int (int)> getfd_callback;
@@ -658,7 +665,8 @@ typedef callback<int (int)> getfd_callback;
 #define LINE_FILTER     0x0008 // line needs to be filtered before display (NYI)
 #define LINE_BIDI       0x0010 // line needs bidi (NYI)
 
-struct line_t {
+struct line_t
+{
    text_t *t; // terminal the text
    rend_t *r; // rendition, uses RS_ flags
    tlen_t_ l; // length of each text line
@@ -702,7 +710,8 @@ struct line_t {
 /****************************************************************************/
 
 // primitive wrapper around mbstate_t to ensure initialisation
-struct mbstate {
+struct mbstate
+{
   mbstate_t mbs;
 
   operator mbstate_t *() { return &mbs; }
@@ -733,14 +742,16 @@ struct mbstate {
 // compose chars are used to represent composite characters
 // that are not representable in unicode, as well as characters
 // not fitting in the BMP.
-struct compose_char {
+struct compose_char
+{
   unicode_t c1, c2; // any chars != NOCHAR are valid
   compose_char (unicode_t c1, unicode_t c2)
   : c1(c1), c2(c2)
   { }
 };
 
-class rxvt_composite_vec {
+class rxvt_composite_vec
+{
   vector<compose_char> v;
 public:
   text_t compose (unicode_t c1, unicode_t c2 = NOCHAR);
@@ -769,7 +780,20 @@ extern rxvt_t rxvt_current_term;
 #define SET_R(r) rxvt_current_term = const_cast<rxvt_term *>(r)
 #define GET_R rxvt_current_term
 
-typedef struct {
+/* ------------------------------------------------------------------------- */
+struct overlay_base
+{
+  int x, y, w, h; // overlay dimensions
+  text_t **text;
+  rend_t **rend;
+
+  // while tempting to add swap() etc. here, it effetcively only increases code size
+};
+
+/* ------------------------------------------------------------------------- */
+
+typedef struct
+{
   int row;
   int col;
 } row_col_t;
@@ -810,7 +834,8 @@ typedef struct {
  *  END······················= total_rows
  */
 
-struct TermWin_t {
+struct TermWin_t
+{
   int            width;         /* window width                    [pixels] */
   int            height;        /* window height                   [pixels] */
   int            fwidth;        /* font width                      [pixels] */
@@ -854,7 +879,8 @@ struct TermWin_t {
  * * Note: col == -1 ==> we're left of screen
  *
  */
-typedef struct {
+struct screen_t
+{
   row_col_t       cur;          /* cursor position on the screen             */
   int             tscroll;      /* top of settable scroll region             */
   int             bscroll;      /* bottom of settable scroll region          */
@@ -864,9 +890,10 @@ typedef struct {
   unsigned int    s_charset;    /* saved character set number [0..3]         */
   char            s_charset_char;
   rend_t          s_rstyle;     /* saved rendition style                     */
-} screen_t;
+};
 
-enum selection_op_t {
+enum selection_op_t
+{
   SELECTION_CLEAR = 0,  /* nothing selected                          */
   SELECTION_INIT,       /* marked a point                            */
   SELECTION_BEGIN,      /* started a selection                       */
@@ -874,7 +901,8 @@ enum selection_op_t {
   SELECTION_DONE        /* selection put in CUT_BUFFER0              */
 };
 
-typedef struct {
+struct selection_t
+{
   wchar_t          *text;       /* selected text                             */
   unsigned int      len;        /* length of selected text                   */
   unsigned int      screen;     /* screen being used                         */
@@ -884,7 +912,7 @@ typedef struct {
   row_col_t         beg;        /* beginning of selection   <= mark          */
   row_col_t         mark;       /* point of initial click   <= end           */
   row_col_t         end;        /* one character past end point              */
-} selection_t;
+};
 
 /* ------------------------------------------------------------------------- */
 
@@ -908,7 +936,8 @@ Opt_count
 
 /* ------------------------------------------------------------------------- */
 
-struct rxvt_vars : TermWin_t {
+struct rxvt_vars : TermWin_t
+{
   scrollBar_t     scrollBar;
   uint8_t         options[(Opt_count + 7) >> 3];
   XSizeHints      szHint;
@@ -928,7 +957,8 @@ struct rxvt_vars : TermWin_t {
 #endif
 };
 
-struct rxvt_term : zero_initialized, rxvt_vars, rxvt_screen {
+struct rxvt_term : zero_initialized, rxvt_vars, rxvt_screen
+{
 
   // special markers with magic addresses
   static const char resval_undef [];    // options specifically unset
@@ -1038,9 +1068,7 @@ struct rxvt_term : zero_initialized, rxvt_vars, rxvt_screen {
 #endif
 
 #if ENABLE_OVERLAY
-  int ov_x, ov_y, ov_w, ov_h; // overlay dimensions
-  text_t **ov_text;
-  rend_t **ov_rend;
+  overlay_base ov;
 
   void scr_swap_overlay () NOTHROW;
   void scr_overlay_new (int x, int y, int w, int h) NOTHROW;
