@@ -19,7 +19,6 @@ WISH: load system-wide config file even if we don't have one
 WISH: look into XAddConnectionWatch, does anybody need that?
 DUMB: support tex fonts
 
-TODO: cursor over overlays, when focus change?
 TODO: cursor restore/rendition restore on rmcup
 	- the aterm code now frees the as visual and image manager objects
           when a window was closed.
@@ -57,6 +56,8 @@ TODO: cursor restore/rendition restore on rmcup
         - use current rendition style in DCH sequence.
         - the 132/80 mode switch no longer forces a screen reset.
         - new perl extension "overlay-osc", for status displays and the like.
+        - fix some minor cursor drawing issues with overlays by allowing
+          overlays to modify screen flags (to disable the cursor themselves).
 
 9.05 Sun Jun 15 20:09:20 CEST 2008
 	- new option --cd/chdir to set the starting working directory.
